# RobotPix2.0

./: help.py  test_mraa.py
arduino/arduinoController/: DcEncoders.ino  DcMotors.ino  Gyroscope.ino  arduinoController.ino
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/lib/beginner_camera/: gopro_cam  pixy_cam  usb_cam
catkin_ws/devel/lib/dashboard/: __init__.py  button_gpio.py  button_i2c.py  factory.py  grove_LedButton.py  robotPix_globalVars.py
catkin_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
catkin_ws/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
catkin_ws/devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
catkin_ws/devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
catkin_ws/devel/lib/hector_map_server/: hector_map_server
catkin_ws/devel/lib/hector_trajectory_server/: hector_trajectory_server
catkin_ws/devel/lib/image_converter/: image_converter_node
catkin_ws/devel/lib/itinerary_follower/: itinerary_follower_moveBaseConverter  itinerary_follower_node
catkin_ws/devel/lib/mapping/: map_monitor  mapping_node
catkin_ws/devel/lib/mouse_control/: mouse_control_node
catkin_ws/devel/lib/pixy/: pixy_analyzer  pixy_node  pixy_qrcode_demo
catkin_ws/devel/lib/pixy2_ros/: pixy2_cam
catkin_ws/devel/lib/pkgconfig/: beginner_camera.pc  cv_bridge.pc  dashboard.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  image_converter.pc  image_geometry.pc  itinerary_follower.pc  mapping.pc  mouse_control.pc  opencv_tests.pc  pixy.pc  pixy2_camera.pc  pixy2_qr_reader.pc  pixy2_ros.pc  rplidar_control.pc  wall_detector.pc
catkin_ws/devel/lib/rplidar_control/: rplidar_control_node
catkin_ws/devel/lib/wall_detector/: wall_detector  wall_detector_mapping  wall_detector_node  wall_detector_tech
catkin_ws/devel/share/beginner_camera/cmake/: beginner_cameraConfig.cmake
catkin_ws/devel/share/cv_bridge/cmake/: cv_bridge-extras.cmake  cv_bridgeConfig.cmake
catkin_ws/devel/share/dashboard/cmake/: dashboardConfig.cmake
catkin_ws/devel/share/hector_compressed_map_transport/cmake/: hector_compressed_map_transportConfig.cmake
catkin_ws/devel/share/hector_geotiff/cmake/: hector_geotiffConfig.cmake
catkin_ws/devel/share/hector_geotiff_launch/cmake/: hector_geotiff_launchConfig.cmake
catkin_ws/devel/share/hector_geotiff_plugins/cmake/: hector_geotiff_pluginsConfig.cmake
catkin_ws/devel/share/hector_imu_attitude_to_tf/cmake/: hector_imu_attitude_to_tfConfig.cmake
catkin_ws/devel/share/hector_imu_tools/cmake/: hector_imu_toolsConfig.cmake
catkin_ws/devel/share/hector_map_server/cmake/: hector_map_serverConfig.cmake
catkin_ws/devel/share/hector_map_tools/cmake/: hector_map_toolsConfig.cmake
catkin_ws/devel/share/hector_mapping/cmake/: hector_mapping-msg-paths.cmake  hector_mappingConfig.cmake
catkin_ws/devel/share/hector_marker_drawing/cmake/: hector_marker_drawingConfig.cmake
catkin_ws/devel/share/hector_nav_msgs/cmake/: hector_nav_msgsConfig.cmake
catkin_ws/devel/share/hector_slam_launch/cmake/: hector_slam_launchConfig.cmake
catkin_ws/devel/share/hector_trajectory_server/cmake/: hector_trajectory_serverConfig.cmake
catkin_ws/devel/share/image_converter/cmake/: image_converterConfig.cmake
catkin_ws/maps/: map copy.pgm  map.pgm  map.yaml  map1.pgm  map1yaml
catkin_ws/src/dashboard/: CMakeLists.txt  package.xml
catkin_ws/src/dashboard/scripts/: main_robotPix.py  robotPix_buttonsHandler.py
catkin_ws/src/itinerary_follower/: CMakeLists.txt  package.xml
catkin_ws/src/itinerary_follower/config/: amcl.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  robot.urdf
catkin_ws/src/itinerary_follower/include/: AllPoints.h
catkin_ws/src/itinerary_follower/launch/: complete_run.launch  follow_itineraries.launch  old
catkin_ws/src/itinerary_follower/src/: itinerary_controller.cpp  moveBasetoArduino.cpp
catkin_ws/src/itinerary_follower/waypoints/: 0_schoolWps.txt  schoolWps.txt
catkin_ws/src/mapping/: CMakeLists.txt
catkin_ws/src/mapping/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/mapping/launch/: startMapping.launch
catkin_ws/src/mapping/src/: map_monitor.cpp  mapping_node.cpp
catkin_ws/src/mouse_control/: CMakeLists.txt
catkin_ws/src/mouse_control/launch/: mapping_manual.launch
catkin_ws/src/mouse_control/src/: robot_mouseControl.cpp
catkin_ws/src/pixy/: CMakeLists.txt  package.xml
catkin_ws/src/pixy/executables/: get_blocks  get_raw_frame  out.ppm
catkin_ws/src/pixy/launch/: pixy.launch
catkin_ws/src/pixy/src/: pixy_info_analyzer.cpp  pixy_qrcode_demo.cpp  pixy_reader.cpp
catkin_ws/src/pixy2_camera/: CMakeLists.txt  package.xml
catkin_ws/src/pixy2_camera/src/: pixy2_node.cpp  usblink.h
catkin_ws/src/rplidar_control/: CMakeLists.txt
catkin_ws/src/rplidar_control/launch/: rplidar_control.launch
catkin_ws/src/rplidar_control/src/: rplidar_control.cpp
catkin_ws/src/wall_detector/: CMakeLists.txt  package.xml
catkin_ws/src/wall_detector/launch/: mapping.launch  wall_detector.launch  wall_techControl.launch
catkin_ws/src/wall_detector/src/: mapping.cpp  wall_detector.cpp  wall_techControl.cpp
groveScripts/scripts/: main_robotPix.py  robotPix_buttonsHandler.py  robotPix_globalVars.py  robotPix_lidarControl.py  start_robot.py
groveScripts/scripts/old/: firstScenarioTest.py  lcdTest.py  scenarioControl.py
rpi_vl53l0x-0.0.3/: MANIFEST.in  Makefile  Makefile.top  PKG-INFO  README.md  rpi_vl53l0x_wrap.c  setup.py
rpi_vl53l0x-0.0.3/platform/inc/: vl53l0x_platform.h
rpi_vl53l0x-0.0.3/platform/src/: vl53l0x_platform.c
rpi_vl53l0x-0.0.3/rpi_vl53l0x/: __init__.py  vl53l0x.py
rpi_vl53l0x-0.0.3/rpi_vl53l0x.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+17 files in other folders)
